--- a/android/framework/loader/build.gradle
+++ b/android/framework/loader/build.gradle
@@ -102,6 +102,10 @@ dependencies {
      */
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //optional, help to generate the final application
+    annotationProcessor('com.tencent.tinker:tinker-android-anno:1.9.1')
+    //tinker's main Android lib
+    implementation('com.tencent.tinker:tinker-android-lib:1.9.1')
 }
 apply from : "${rootDir}/script/module_publisher.gradle"
 publish {
