--- a/android/components/home-module/myhome/build.gradle
+++ b/android/components/home-module/myhome/build.gradle
@@ -1,4 +1,15 @@
-//apply plugin: 'bundle-module'
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "home-myhome"
+    groupId = gradle.groupId
+    artifactId = "home-myhome"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
+
 apply from: "$rootDir.path/script/bundle_module.gradle"
 apply from: "${rootDir.path}/script/ui_tradition.gradle"
 android {
@@ -25,13 +36,4 @@ android {
 }
 dependencies {
 //    lintChecks project(path: ':lint-rules')
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "home-myhome"
-    groupId = gradle.groupId
-    artifactId = "home-myhome"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
