--- a/android/components/hotel-module/bundle2/build.gradle
+++ b/android/components/hotel-module/bundle2/build.gradle
@@ -1,4 +1,16 @@
-//apply plugin: 'bundle-module'
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "hotel-bundle2"
+    groupId = gradle.groupId
+    artifactId = "hotel-bundle2"
+//    version = "1.0.0-$gradle.activeBuildVariant-SNAPSHOT"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+//    buildVariant = gradle.activeBuildVariant
+}
 apply from: "$rootDir.path/script/bundle_module.gradle"
 apply from: "${rootDir.path}/script/ui_tradition.gradle"
 android {
@@ -21,15 +33,4 @@ android {
 dependencies {
 //    implementation project(path: ':components:hotel-module:foundation')
     implementation 'com.facebook.device.yearclass:yearclass:2.1.0'
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "hotel-bundle2"
-    groupId = gradle.groupId
-    artifactId = "hotel-bundle2"
-//    version = "1.0.0-$gradle.activeBuildVariant-SNAPSHOT"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
-//    buildVariant = gradle.activeBuildVariant
 }
