--- a/android/framework/hybrid/build.gradle
+++ b/android/framework/hybrid/build.gradle
@@ -1,5 +1,6 @@
-apply from: "${rootDir}/script/foundation_module.gradle"
-apply from : "${rootDir}/script/module_publisher.gradle"
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
 publish {
     name = "framework-hybrid"
     groupId = gradle.groupId
@@ -8,3 +9,4 @@ publish {
     website = "https://github.com/JamesfChen/spacecrafe-android"
     buildVariant = "debug"
 }
+apply from: "${rootDir}/script/foundation_module.gradle"
