--- a/android/framework/image/build.gradle
+++ b/android/framework/image/build.gradle
@@ -1,4 +1,14 @@
-//apply plugin: 'foundation-module'
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "framework-image"
+    groupId = gradle.groupId
+    artifactId = "framework-image"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
 apply from: "${rootDir.path}/script/foundation_module.gradle"
 android {
     defaultConfig {
@@ -86,13 +96,4 @@ dependencies {
     /**
      * ===============================image end=============================
      */
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "framework-image"
-    groupId = gradle.groupId
-    artifactId = "framework-image"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
