--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,7 +19,7 @@ android.debug.obsoleteApi=true
 -Djavax.net.ssl.trustStore=/path/to/truststore -Djavax.net.ssl.trustStorePassword=password
 android.injected.testOnly=false
 #firebasePerformanceInstrumentationEnabled=false
-
+useJamesfChenSnapshots = true
 ########################################################version control start
 applicationId=com.jamesfchen.spacecraft
 compileSdkVersion = 30
