--- a/android/components/hotel-module/bundle1/build.gradle
+++ b/android/components/hotel-module/bundle1/build.gradle
@@ -1,4 +1,14 @@
-//apply plugin: 'bundle-module'
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "hotel-bundle1"
+    groupId = gradle.groupId
+    artifactId = "hotel-bundle1"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
 apply from: "$rootDir.path/script/bundle_module.gradle"
 apply from: "${rootDir.path}/script/ui_compose.gradle"
 android {
@@ -19,13 +29,4 @@ android {
 
     }
 
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "hotel-bundle1"
-    groupId = gradle.groupId
-    artifactId = "hotel-bundle1"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
