--- a/android/components/hotel-module/foundation/build.gradle
+++ b/android/components/hotel-module/foundation/build.gradle
@@ -1,4 +1,14 @@
-//apply plugin: 'foundation-module'
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "hotel-foundation"
+    groupId = gradle.groupId
+    artifactId = "hotel-foundation"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
 apply from: "${rootDir.path}/script/foundation_module.gradle"
 apply from: "${rootDir.path}/script/ui_tradition.gradle"
 android {
@@ -25,13 +35,4 @@ android {
 dependencies {
 //    lintChecks project(path: ':components:hotel-module:hotel-lint')
 //    lintPublish project(path: ':components:hotel-module:hotel-lint')
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "hotel-foundation"
-    groupId = gradle.groupId
-    artifactId = "hotel-foundation"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
