--- a/android/components/hotel-module/hotel-lint/build.gradle
+++ b/android/components/hotel-module/hotel-lint/build.gradle
@@ -1,6 +1,16 @@
 plugins {
     id 'java-library'
     id 'kotlin'
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+//发布到maven
+publish {
+    name="hotel-lint"
+    groupId = gradle.groupId
+    artifactId = "hotel-lint"
+    version = "1.0.0"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "java"
 }
 dependencies {
     // so many stdlib to choose from!
@@ -34,13 +44,4 @@ jar {
 //project.configurations.all {
 //    resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
 //}
-//发布到maven
-apply from: "${rootDir}/script/module_publisher.gradle"
-publish {
-    name="hotel-lint"
-    groupId = gradle.groupId
-    artifactId = "hotel-lint"
-    version = "1.0.0"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "java"
-}
+
