--- a/android/components/im-module/chatroom/build.gradle
+++ b/android/components/im-module/chatroom/build.gradle
@@ -1,3 +1,14 @@
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "im-chatroom"
+    groupId = gradle.groupId
+    artifactId = "im-chatroom"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
 apply from: "$rootDir.path/script/bundle_module.gradle"
 apply from: "${rootDir.path}/script/ui_compose.gradle"
 android {
@@ -13,13 +24,4 @@ android {
     }
 }
 dependencies {
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "im-chatroom"
-    groupId = gradle.groupId
-    artifactId = "im-chatroom"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
