--- a/android/framework/mockserver/build.gradle
+++ b/android/framework/mockserver/build.gradle
@@ -1,7 +1,14 @@
-ext.srcDirs=[
-        "printlogs",
-]
-//apply plugin: 'foundation-module'
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "framework-mockserver"
+    groupId = gradle.groupId
+    artifactId = "framework-mockserver"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
 apply from: "${rootDir.path}/script/foundation_module.gradle"
 
 android {
@@ -16,13 +23,4 @@ android {
 dependencies {
     api "com.squareup.okhttp3:mockwebserver:${OKHTTP_MOCK_VERSION}"
     api "com.squareup.retrofit2:retrofit-mock:${RETROFIT_VERSION}"
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "framework-mockserver"
-    groupId = gradle.groupId
-    artifactId = "framework-mockserver"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
