--- a/android/framework/network/build.gradle
+++ b/android/framework/network/build.gradle
@@ -1,3 +1,14 @@
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "framework-network"
+    groupId = gradle.groupId
+    artifactId = "framework-network"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
 apply from: "${rootDir.path}/script/foundation_module.gradle"
 static String getLocalIP() {
     InetAddress result = null
@@ -56,13 +67,4 @@ dependencies {
 //    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 //    implementation "com.github.jnr:jnr-unixsocket:0.23"
     api "com.google.android.gms:play-services-cronet:${CRONET_VERSION}"
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "framework-network"
-    groupId = gradle.groupId
-    artifactId = "framework-network"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
