--- a/android/framework/rn/build.gradle
+++ b/android/framework/rn/build.gradle
@@ -1,3 +1,14 @@
+plugins {
+    id "io.github.jamesfchen.module-publisher-plugin" version "1.1.0"
+}
+publish {
+    name = "framework-rn"
+    groupId = gradle.groupId
+    artifactId = "framework-rn"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
 apply from: "${rootDir.path}/script/foundation_module.gradle"
 
 /**
@@ -136,13 +147,4 @@ dependencies {
 //    } else {
 //        implementation jscFlavor
 //    }
-}
-apply from : "${rootDir}/script/module_publisher.gradle"
-publish {
-    name = "framework-rn"
-    groupId = gradle.groupId
-    artifactId = "framework-rn"
-    version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/spacecrafe-android"
-    buildVariant = "debug"
 }
