--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,10 @@
 buildscript {
     repositories {
 
+        maven { url uri("$rootDir/repo") }
+        mavenCentral()
+        mavenLocal()
+//        google()
         //publish 同时包含rlease与snapshot
         maven {url 'https://s01.oss.sonatype.org/content/repositories/public/' }
         maven {url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
@@ -16,10 +20,6 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url "https://maven.aliyun.com/repository/public" }
-        maven { url uri("$rootDir/repo") }
-        mavenCentral()
-        mavenLocal()
-        google()
 
     }
     dependencies {
@@ -63,6 +63,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url uri("$rootDir/repo") }
+        mavenLocal()
+        mavenCentral()
+//        google()
         maven {url 'https://s01.oss.sonatype.org/content/repositories/public/' }
         maven {url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
         maven {url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/' }
@@ -70,10 +74,6 @@ allprojects {
         maven { url 'https://plugins.gradle.org/m2/' }
         maven {url 'https://maven.aliyun.com/repository/google/' }
         maven {url "https://maven.aliyun.com/repository/public" }
-        maven { url uri("$rootDir/repo") }
-        mavenLocal()
-        mavenCentral()
-        google()
 //        flatDir {
 //            if (findProject(':components:account-module:impl') !=null){
 //                dirs project(':components:account-module:impl').file('libs')
