--- a/android/components/account-module/impl/build.gradle
+++ b/android/components/account-module/impl/build.gradle
@@ -47,12 +47,13 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar','*.aar'])
+    api fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     //电信一键登入文档：http://dev.10086.cn/docInside?contentId=10000067541479
 //    implementation(name:"cmic_quick_login_android_5.9.1", ext:"aar")
     //联通一键登入文档：https://onlinebusiness.10010.com/product/5302?chnl=none
     //移动一键登入文档：https://id.189.cn/banner/unPassword
     //    implementation 'com.google.firebase:firebase-auth:21.0.1'
+//    api "io.github.jamesfchen:cmic-quick-login-android:5.9.1"
     implementation 'com.firebaseui:firebase-ui-auth:6.0.2'
     api 'com.google.firebase:firebase-auth'
 
