--- a/android/components/im-module/chatroom/build.gradle
+++ b/android/components/im-module/chatroom/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id "io.github.jamesfchen.bundle-plugin"
 }
 apply from: "${rootDir.path}/script/ui_compose.gradle"
-
+android{
+    buildFeatures {
+        viewBinding true
+    }
+}
 dependencies {
 }
