--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,7 +5,7 @@ pluginManagement {
         mavenCentral()
 //        google()
         maven { url 'https://s01.oss.sonatype.org/content/repositories/public/' }
-//        maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" }
+        maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" }
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
         maven { url "https://jitpack.io" }
@@ -23,7 +23,7 @@ dependencyResolutionManagement {
         mavenCentral()
 //        google()
         maven { url 'https://s01.oss.sonatype.org/content/repositories/public/' }
-//        maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" }
+        maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" }
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
         maven { url "https://plugins.gradle.org/m2/" }
@@ -34,4 +34,4 @@ dependencyResolutionManagement {
 apply from:'./script/trace_gradle.gradle'
 apply from:'./script/module_registry.gradle'
 includeBuild("../groovy-gradle-plugin")
-
+includeBuild("../kotlin-gradle-plugin")
