--- a/android/components/account-module/impl/src/main/AndroidManifest.xml
+++ b/android/components/account-module/impl/src/main/AndroidManifest.xml
@@ -25,11 +25,11 @@
         <activity
             android:name="com.cmic.sso.activity.MainActivity"
             android:windowSoftInputMode="stateAlwaysHidden">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <!--android:configChanges="orientation|keyboardHidden|screenSize"
