--- a/android/components/update-module/appupdate/src/main/AndroidManifest.xml
+++ b/android/components/update-module/appupdate/src/main/AndroidManifest.xml
@@ -2,17 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jamesfchen.appupdate">
 
-    <!-- 可选-->
-    <uses-permission android:name="android.permission.READ_LOGS" /> <!-- 获取logcat日志 -->
     <application>
         <!-- 可选-->
-        <activity android:name="com.pgyersdk.activity.FeedbackActivity"/>
-        <!-- 必选-->
-        <meta-data
-            android:name="PGYER_APPID"
-            android:value="8543d53b97cbb4daa5f55f807ab7e31e" >
-        </meta-data>
-
+        <activity android:name="com.pgyersdk.feedback.FeedbackActivity"/>
         <activity android:name=".UpdateActivity"/>
     </application>
 </manifest>
