--- a/android/framework/loader/build.gradle
+++ b/android/framework/loader/build.gradle
@@ -11,15 +11,20 @@ android {
         manifestPlaceholders = [
                 'BUGLY_APP_ID': '3d62251014', 'BUGLY_APP_KEY': 'a15ecf84-1786-40c6-abf5-fe975fce22e6', "BUGLY_APP_VERSION": "${rootProject.ext.versionName}",
                 'AMAP_KEY'    : '84198333a8ab4404cd35829dbb4ec435',
+                "PGYER_APPID":'0ba5ba7940deded0f77b37b7655b252e',
+                "PGYER_API_KEY":'8543d53b97cbb4daa5f55f807ab7e31e',
+                "PGYER_FRONTJS_KEY":"ac450bcd9fdca58dddb1a630bb752dd7"
         ]
         buildTypes {
             release {
-                manifestPlaceholders = ['QQ_KEY': 'adf', 'WEXIN_KEY': 'adfaf', 'BUGLY_ENABLE_DEBUG': 'false']
+                manifestPlaceholders = [
+                        'QQ_KEY'   : 'adf', 'WEXIN_KEY': 'adfaf'
+
+                ]
             }
             debug {
                 manifestPlaceholders = [
-                        'QQ_KEY'            : 'adf', 'WEXIN_KEY': 'adfaf',
-                        'BUGLY_ENABLE_DEBUG': 'true'
+                        'QQ_KEY': 'adf', 'WEXIN_KEY': 'adfaf'
                 ]
             }
         }
@@ -32,6 +37,8 @@ dependencies {
     //crash and anr
     api 'com.tencent.bugly:nativecrashreport:3.7.1'
     api 'com.tencent.bugly:crashreport:3.0.0'
+    api 'com.pgyersdk:sdk:3.0.10'
+    api 'com.pgyer:analytics:4.2.1'//最好写上具体依赖的版本号 如：4.2.1
     //android 21+可以不接入该sdk，android sdk默认集成
     api 'androidx.multidex:multidex:2.0.1'
 //    implementation 'com.google.android.gms:play-services-location:16.0.0'
@@ -42,8 +49,8 @@ dependencies {
 
     api 'com.firebaseui:firebase-ui-database:6.0.2'
     api 'com.firebaseui:firebase-ui-firestore:6.0.2'
-    api('com.firebaseui:firebase-ui-storage:6.0.2'){
-        exclude group: 'com.github.bumptech.glide',module:'glide'
+    api('com.firebaseui:firebase-ui-storage:6.0.2') {
+        exclude group: 'com.github.bumptech.glide', module: 'glide'
     }
 
 
