--- a/android/framework/loader/src/main/AndroidManifest.xml
+++ b/android/framework/loader/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <!-- 用户手机设置中允许未知来源安装包安装状态为关；-->
+    <!-- Android8.0 以后，如果要安装 apk 需要额外添加权限：-->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -107,6 +109,27 @@
         <!--        <meta-data-->
         <!--            android:name="firebase_performance_collection_deactivated"-->
         <!--            android:value="true" />-->
+        <meta-data
+            android:name="PGYER_APPID"
+            android:value="${PGYER_APPID}"/>
+        <meta-data
+            android:name="PGYER_API_KEY"
+            android:value="${PGYER_API_KEY}"/>
+        <meta-data
+            android:name="PGYER_FRONTJS_KEY"
+            android:value="${PGYER_FRONTJS_KEY}"/>
+        <!-- 渠道 -->
+<!--        <meta-data-->
+<!--            android:name="PGYER_CHALNNEL_KEY"-->
+<!--            android:value=""/>-->
+        <!-- 添加新版本检测 -->
+<!--        <meta-data-->
+<!--            android:name="PGYER_FEATURE_CHECK_UNPDATE"-->
+<!--            android:value="true" />-->
+        <!-- 设置fps阈值 -->
+        <meta-data
+            android:name="PGYER_FPS_THRESHOLD"
+            android:value="10"/>
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
