--- a/android/script/ui_compose.gradle
+++ b/android/script/ui_compose.gradle
@@ -63,6 +63,7 @@ dependencies{
 //    api 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 //    api 'androidx.navigation:navigation-ui-ktx:2.3.5'
     api "com.google.android.material:material:1.4.0"
+    api 'androidx.activity:activity-compose:1.3.1'
 
 
 }
