--- a/android/.gitlab-ci-android.yml
+++ b/android/.gitlab-ci-android.yml
@@ -18,6 +18,7 @@ before_script:
   - export ANDROID_HOME=$PWD/android-sdk-linux
   - echo y | android-sdk-linux/tools/bin/sdkmanager "platform-tools"  "platforms;android-${ANDROID_COMPILE_SDK}" --sdk_root=${ANDROID_HOME} >/dev/null
   - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" --sdk_root=${ANDROID_HOME} >/dev/null
+  - echo "activeBuildVariant=phoneBetaDebug" >> local.properties
   #  - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
   # temporarily disable checking for EPIPE error and use yes to accept all licenses
   - set +o pipefail
