--- a/android/components/account-module/export/build.gradle
+++ b/android/components/account-module/export/build.gradle
@@ -1,23 +1,6 @@
 plugins {
     id "io.github.jamesfchen.api-plugin"
 }
-apply plugin: 'com.alibaba.arouter'
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
-}
-android {
-    defaultConfig {
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
-            }
-        }
-    }
-}
 dependencies {
-    annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
-//    kapt 'com.alibaba:arouter-compiler:1.5.2'
-    api 'com.alibaba:arouter-api:1.3.2'
+    api "org.jetbrains.kotlin:kotlin-stdlib:${KOTLIN_VERSION}"
 }
