--- a/android/components/hotel-module/main/src/main/AndroidManifest.xml
+++ b/android/components/hotel-module/main/src/main/AndroidManifest.xml
@@ -3,33 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.jamesfchen.main">
 
-    <application
-        android:name="com.jamesfchen.main.HotelApp"
-        android:allowBackup="false"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        tools:replace="android:name,android:allowBackup"
-        android:icon="@mipmap/ic_launcher"
-        >
-        <activity
-            android:name="com.jamesfchen.bundle1.Bundle1Activity"
-            >
+<!--    <application-->
+<!--        android:name="com.jamesfchen.main.HotelApp"-->
+<!--        android:allowBackup="false"-->
+<!--        android:label="@string/app_name"-->
+<!--        android:supportsRtl="true"-->
+<!--        android:usesCleartextTraffic="true"-->
+<!--        tools:replace="android:name,android:allowBackup"-->
+<!--        android:icon="@mipmap/ic_launcher"-->
+<!--        >-->
+<!--        <activity-->
+<!--            android:name="com.jamesfchen.bundle1.Bundle1Activity"-->
+<!--            >-->
+<!--&lt;!&ndash;            <intent-filter>&ndash;&gt;-->
+<!--&lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
+
+<!--&lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
+<!--&lt;!&ndash;            </intent-filter>&ndash;&gt;-->
+<!--        </activity>-->
+<!--        <activity-->
+<!--            android:name="com.jamesfchen.bundle2.Bundle2Activity"-->
+<!--            android:theme="@style/Theme.SpacecraftAndroid.NoActionBar"-->
+<!--            android:exported="true" >-->
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
-        </activity>
-        <activity
-            android:name="com.jamesfchen.bundle2.Bundle2Activity"
-            android:theme="@style/Theme.SpacecraftAndroid.NoActionBar"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+<!--        </activity>-->
+<!--    </application>-->
 </manifest>
