--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -78,8 +78,8 @@ AMAP_SEARCH_VERSION=6.9.2
 AMAP_3DMAP_VERSION=6.9.4
 EXIFINTERFACE_VERISON = 1.3.2
 FIREBASE_VERSION = 28.0.1
-AROUTER_VERSION=1.3.2
-#IBCROUTER_VERSION=1.2.0
+#AROUTER_VERSION=1.3.2
+IBCROUTER_VERSION=1.5.0
 NAVIGATION_VERSION=2.3.5
 #LIFECYCLE_VERSION=1.0.2
 LINT_VERSION = 30.0.4
