--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -123,7 +123,7 @@ dependencies {
 //    releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
 //    debugApi "com.squareup.leakcanary:leakcanary-support-fragment:1.6.3"
     api 'com.github.markzhai:blockcanary-android:1.5.0'
-
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation("io.github.jamesfchen:viapm-api:1.0.0")
     /**
