--- a/android/script/module_registry.gradle
+++ b/android/script/module_registry.gradle
@@ -18,6 +18,7 @@ def child(Object msg) {
 def config = new JsonSlurper().parse(file("$rootDir/module_config.json"))
 gradle.ext.allModules = config.allModules
 gradle.ext.groupId = config.groupId
+gradle.ext.buildVariants = config.buildVariants
 def localProperties = new Properties()
 def localPropertiesFile = new File(rootDir, 'local.properties')
 if (localPropertiesFile.exists()) {
@@ -27,7 +28,13 @@ if (localPropertiesFile.exists()) {
 }
 def excludeModulesStr = localProperties.getProperty('excludeModules', '')
 def sourceModulesStr = localProperties.getProperty('sourceModules', '')
-gradle.ext.activeBuildVariant = localProperties.getProperty('activeBuildVariant', '')
+if (localProperties.getProperty('activeBuildVariant', '')){
+    gradle.ext.activeBuildVariant = localProperties.getProperty('activeBuildVariant', '')
+}else {
+    gradle.ext.activeBuildVariant = gradle.ext.buildVariants.get(0)
+    localProperties.setProperty("activeBuildVariant", gradle.ext.activeBuildVariant)
+    localProperties.store(new FileOutputStream(localPropertiesFile), "update modules")
+}
 gradle.ext.excludeModuleMap = new LinkedHashMap<String, Object>()
 gradle.ext.sourceModuleMap = new LinkedHashMap<String, Object>()
 gradle.ext.binaryModuleMap = new LinkedHashMap<String, Object>()
