--- a/composite-builds/proguard-plugin/build.gradle
+++ b/composite-builds/proguard-plugin/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id "com.gradle.plugin-publish" version "0.15.0"
 }
@@ -27,10 +26,16 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 }
-apply plugin: 'kotlin'
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+apply plugin: 'groovy'
+tasks.withType(GroovyCompile) {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 }
+
+//apply plugin: 'kotlin'
+//compileKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
 
 apply plugin: "java-gradle-plugin"
 gradlePlugin {
@@ -44,5 +49,5 @@ gradlePlugin {
     }
 }
 dependencies {
-    implementation 'io.github.jamesfchen:base-plugin:1.0.2'
+    implementation 'io.github.jamesfchen:base-plugin:1.1.0'
 }
