--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,16 +3,15 @@ pluginManagement {
         maven { url uri("$rootDir/repo") }
         mavenLocal()
         mavenCentral()
-//        google()
         maven { url 'https://s01.oss.sonatype.org/content/repositories/public/' }
         maven { url "https://frontjs-static.pgyer.com/dist/sdk/pgyersdk" }  //主力仓库
         maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" } //备用仓库（主力仓库下载不下来使用）
         maven { url "https://raw.githubusercontent.com/PGYER/analytics/master" }  //备用仓库（主力仓库下载不下来使用）
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
-        maven { url "https://jitpack.io" }
-        maven { url "https://plugins.gradle.org/m2/" }
+//        maven { url "https://jitpack.io" }
         maven{ url "https://dl.bintray.com/kotlin/kotlin-eap"}
+        maven { url "https://plugins.gradle.org/m2/" }
         gradlePluginPortal()
     }
     plugins {
@@ -24,15 +23,14 @@ dependencyResolutionManagement {
         maven { url uri("$rootDir/repo") }
         mavenLocal()
         mavenCentral()
-//        google()
         maven { url 'https://s01.oss.sonatype.org/content/repositories/public/' }
         maven { url "https://frontjs-static.pgyer.com/dist/sdk/pgyersdk" }  //主力仓库
         maven { url "https://raw.githubusercontent.com/Pgyer/mvn_repo_pgyer/master" } //备用仓库（主力仓库下载不下来使用）
         maven { url "https://raw.githubusercontent.com/PGYER/analytics/master" }  //备用仓库（主力仓库下载不下来使用）
         maven { url 'https://maven.aliyun.com/repository/google/' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
+//        maven { url "https://jitpack.io" }
         maven { url "https://plugins.gradle.org/m2/" }
-        maven { url "https://jitpack.io" }
         gradlePluginPortal()
     }
 }
@@ -40,3 +38,4 @@ apply from:'./script/trace_gradle.gradle'
 apply from:'./script/module_registry.gradle'
 includeBuild("../composite-builds")
 includeBuild("../composite-builds2")
+//includeBuild("framework/network/super-retrofit")
